--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="button-header">LOG IN</button>
     </header>
     <main>
-        <img src="/assets/we-care.png" alt="we-care-logo" class="logo-image">
+        <img src="./assets/we-care.png" alt="we-care-logo" class="logo-image">
 
         <section>
             <h1>We Care</h1>
